# PathMarchCL

./: .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
cmake/: FindSDL2_image.cmake
include/: App.hpp  CLUtils.hpp  Camera.hpp  OCLRenderer.hpp  OGLRenderer.hpp  OnScreenDisplayable.hpp  Shader.hpp  ShaderProgram.hpp  StatusBar.hpp  Texture.hpp  TextureDisplay.hpp  common.hpp
kernels/: common.cl  kernels.cl  raymarch_kaleido.cl  raymarch_menger.cl  tonemap.cl
shader/: displayFs.glsl  displayVs.glsl  renderFs.glsl  renderVs.glsl
src/: App.cpp  CLUtils.cpp  OCLRenderer.cpp  OGLRenderer.cpp  Shader.cpp  ShaderProgram.cpp  StatusBar.cpp  main.cpp
